# poetry-speleo

./: README.md  pyproject.toml
poetry_speleo/: plugin.py
